--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 
 body {
   padding: 0;
-  background-color: #fdf1b8 !important;
+  background-color: #FFEBB2 !important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
